--- a/index.html
+++ b/index.html
@@ -1,17 +1,59 @@
+<head>
 <style>
 header {
   display: none;
 }
+#DisplayGrid {
+  width: 640px;
+  height: 640px;
+  position: relative;
+  background-color: blanchedalmond;
+}
+
+.Piece {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+}
+
+.Square {
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  background-color: black;
+}
+.infill {
+  height: 100%;
+  width: 100%;
+  display: inline-block;
+  background-color: red;
+}
 </style>
-<div id="DebugOutput">Loading....</div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
 $().ready(function() {
    $("#DebugOutput").html("Success.");
     $.getJSON("https://spreadsheets.google.com/feeds/list/1cQ7usd1qAsDJwqlgVhowgQeMQPvPT98YDGpC-wVDLSg/1/public/full?alt=json", function(data) {
-      console.log(data);
-      $("#DebugOutput").html(JSON.stringify(data));
+      ParseData(data.feed.entry)
     });
 });
+function ParseData(Entries){
+  console.log(Entries);
+  $("#DebugOutput").html(Entries.length);
+  Entries.forEach(element => {
+    var EID = element.gsx$id.$t
+    var TempHtml = '<div class="Piece" title="ID:' + EID + ' Row:' + Math.floor(Number(EID)/16) + ' Col:' + (Number(EID) % 16) + '" style="top: ' + Math.floor(Number(EID)/16) * 40 + 'px; left: ' + ((Number(EID) % 16) * 40) + 'px;">';
+      for(var i = 0; i< 16; i++ ){
+        TempHtml = TempHtml + '<div class="Square"><span class="infill" style="opacity: ' + Number(element['gsx$b' + (i + 1)].$t)/100 + '"></span></div>'
+      }
+    var TempHtml = TempHtml + '</div>';
+    $("#DisplayGrid").append(TempHtml);
+  });
+}
 </script>
+</head>
+<body>
+  <div id="DebugOutput">Loading....</div>
+  <div id="DisplayGrid"></div>
+</body>
